# 420-c-

./: CMakeLists.txt  JournalLog.cpp  JournalLog.h  README.md  bibliotheque  book.cpp  book.h  books.txt  filemanager.cpp  filemanager.h  library.cpp  library.h  logs.txt  main.cpp  user.cpp  user.h  users.txt
data/: books.txt  users.txt
